--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ h3 {
 	background-color: #dceb0f;
 	margin: 30px;
 	padding: 30px;
-	height: 700;
+	height: 700px;
 	width: 1000px;
 }
 .image-3 {
